Fix hero alignment and styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,9 @@ a {
     background-color: var(--dark-color);
 }
 
-.dark-background p {
+.secondary-text {
     color: var(--secondary);
-    font-weight: 300;
+    font-weight: 200;
     font-size: 18px;
     line-height: 1.5rem;
 }
@@ -56,12 +56,6 @@ a {
     color: var(--main-color);
     font-size: 24px;
     font-weight: bold;
-}
-
-.nav-item {
-    color: var(--secondary);
-    font-size: 18px;
-    font-weight: 200;
 }
 
 .column {
@@ -76,6 +70,11 @@ a {
     font-size: 48px;
     font-weight: 900;
     color: var(--main-color);
+}
+
+.hero {
+    height: 70vh;
+    align-items: center;
 }
 
 .hero button {
